fix: fixed progress step items alignment

--- a/src/assets/styles/components/_progres-stepper.scss
+++ b/src/assets/styles/components/_progres-stepper.scss
@@ -14,7 +14,7 @@
   @include mixin.flexbox;
 
   &--horizontal {
-    @include mixin.align-items(center);
+    @include mixin.align-items(flex-start);
     width: 100%;
 
     .step {
